# Jaundice-Detector

./: .gitignore  LICENSE  README.md  SETUP.md  TRAINING_GUIDE.md  UI_GUIDE.md  pyproject.toml  requirements.txt  run_app.py  train.py
app/: README.md  app.py
data/: README.md
scripts/: download_data.sh  split_data.py  train_local.sh
src/: __init__.py  config.py
src/data/: README.md  __init__.py  dataset.py  loader.py
src/inference/: README.md  __init__.py  predictor.py
src/training/: README.md  __init__.py  model.py  train.py  trainer.py
src/ui/: README.md  __init__.py
tests/: test_placeholder.txt
